--- a/src/main/resources/templates/auth.html
+++ b/src/main/resources/templates/auth.html
@@ -21,6 +21,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.0.0/mdb.min.css"
             rel="stylesheet"
     />
+    <script src="/js/main.js"></script>
     <title>AnyChat</title>
 </head>
 <body>
